--- a/src/main/webapp/WEB-INF/pages/hello.html
+++ b/src/main/webapp/WEB-INF/pages/hello.html
@@ -2,13 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Home</title>
+    <!--<link rel="stylesheet" href="/resources/CSS/bootstrap.min.css"/>-->
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.1.1/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="/resources/CSS/site.css" type="text/css"/>
 </head>
 <body>
+<div class="container-fluid">
 <h2>Hello from Thymeleaf!!!</h2>
 
 <h3 th:text="${name}"> Akbar </h3>
 
-<p>My name is <span th:text="${author.name}"></span></p>
+<p class="author-name">My name is <span th:text="${author.name}"></span></p>
 <ul>
     <li th:each="s: ${authors}">
         Name is <span th:text="${s.name}"></span>
@@ -16,13 +20,21 @@
 </ul>
 
 <form action="/save" method="post">
-    <input type="text" name="title" />
-    <input type="submit" value="Save" />
+    <input type="text" name="title"/>
+    <input type="submit" value="Save"/>
 </form>
 
 <form action="/save2" method="post" th:object="${newAuthor}">
-    <input type="text" th:field="*{name}" />
-    <input type="submit" value="Save2" />
+    <input type="text" th:field="*{name}"/>
+    <input type="submit" value="Save2"/>
 </form>
+</div>
+<script th:src="@{webjars/jquery/2.1.1/bootstrap.min.js}"></script>
+<script th:src="@{webjars/bootstrap/3.1.1/js/bootstrap.min.js}"></script>
+<!--<script scr="/resources/js/file.js"></script>
+<script scr="/resources/js/bootstrap.min.js"></script>-->
+
+<script src="/resources/js/alert.js"></script>
+
 </body>
 </html>
