--- a/src_oshibka/main/webapp/WEB-INF/pages/master.html
+++ b/src_oshibka/main/webapp/WEB-INF/pages/master.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
-<head lang="en">
-    <meta charset="UTF-8"/>
-    <title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE">jStore</title>
-
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
-          th:href="@{/webjars/bootstrap/3.1.1/css/bootstrap.min.css}" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css"
-          href="/resources/css/site.css"/>
+<head>
+    <title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE">JSTORE</title>
+    <!--<link rel="stylesheet" href="/resources/CSS/bootstrap.min.css"/>-->
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.1.1/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="/resources/CSS/site.css" type="text/css"/>
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
@@ -31,7 +26,7 @@
             <li><a th:href="@{/blog}">Blog</a></li>
             <li><a th:href="@{/forum}">Forum</a></li>
             <li><a th:href="@{/catalog}">Catalog</a></li>
-            <li class="dropdown">
+          <!--  <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">S<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
@@ -40,30 +35,27 @@
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>
                 </ul>
-            </li>
+            </li>-->
         </ul>
     </div>
 </nav>
-<div class="container">
-    <div class="row">
-        <div class="col-md-2">
-            <section layout:fragment="sidebar">
 
-            </section>
+<div class="container-fluid">
+    <div class="row">
+
+        <div class="col-md-2 ">
+            <section layout:fragment="sidebar">  </section>
         </div>
+
         <div class="col-md-10">
-            <section layout:fragment="content">
-                <p>Page content goes here</p>
-            </section>
+            <section layout:fragment="content">  </section>
         </div>
     </div>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"
-        th:src="@{/webjars/jquery/2.1.0/jquery.js}"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"
-        th:src="@{/webjars/bootstrap/3.1.1/js/bootstrap.min.js}" rel="stylesheet"></script>
-<script src="/resources/js/site.js" language="JavaScript"/>
+
+<script th:src="@{/webjars/jquery/2.1.1/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/3.1.1/js/bootstrap.min.js}"></script>
 
 </body>
 </html>
